nav bar y mejoras de diseño

--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
 body {
+    background-color: #8b8b8b;
+    background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23000000' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
     margin: 0;
     padding: 0;
 }
 
-#navcats {
+#navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: black;
+    padding: 10px;
+    z-index: 999;
+}
+
+#navbar ul {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0;
+    padding: 0;
     list-style: none;
+}
+
+#navbar li {
+    margin-left: 20px;
+}
+
+#navbar li a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 5px 10px;
+}
+
+#navbar li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+}
+
+#busquedapm {
+    margin-top: 70px;
 }
